# cheapBuy

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Project2-rubric.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  proj1rubric.md  py-modindex.html  search.html  searchindex.js  use_cases.md  web.html  web.scraper.fetch_description.html  web.scraper.html  web.scraper.scrap.html
extension/: index.html  popup.js
test/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_fetch_description_amazon.py  test_fetch_description_bjs.py  test_fetch_description_costco.py  test_fetch_description_ebay.py  test_fetch_description_walmart.py  test_server_api.py  test_web_scrapper_amazon.py  test_web_scrapper_bjs.py  test_web_scrapper_ebay.py  test_web_scrapper_scrap_bjs.py  test_web_scrapper_scrap_costco.py  test_web_scrapper_scrap_ebay.py  test_web_scrapper_scrap_walmart.py
tests/: README.md  __init__.py  test_fetch_description_amazon.py  test_fetch_description_bjs.py  test_fetch_description_costco.py  test_fetch_description_ebay.py  test_fetch_description_walmart.py  test_server_api.py  test_web_scrapper.py  test_web_scrapper_amazon.py  test_web_scrapper_bjs.py  test_web_scrapper_ebay.py  test_web_scrapper_scrap_amazon.py  test_web_scrapper_scrap_bjs.py  test_web_scrapper_scrap_costco.py  test_web_scrapper_scrap_walmart.py  test_web_scrapper_walmart.py
web_scrappers/: fetch_description_amazon.py  fetch_description_bjs.py  fetch_description_costco.py  web_scrapper_bjs.py  (+3 more)
(+48 files in other folders)
