[metadata]
name = cheapBuy
version = 2.0.0
description = a chrome extension which suggests alternate products from different e-commerce websites
author = Sharath Kumar, Jainam Shah, Ashwin Kumar Muniswamy, Aakriti
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aakriti0fnu/cheapBuy
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =code
packages=find:
install_requires =
    webdriver-manager
    selenium
    requests
    Flask
    Flask-RESTful
    Flask-Cors
    beautifulsoup4
    pytest
    lxml
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where=code